// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampaignStatus viewerCanAdminister: false campaign errored 1`] = `
<React.Fragment>
  <div>
    <React.Fragment>
      <Memo(AlertCircleIcon)
        className="icon-inline text-danger mr-1"
      />
      Error creating campaign
    </React.Fragment>
  </div>
  <ErrorAlert
    className="mt-2 mb-0"
    error="a"
  />
  <ErrorAlert
    className="mt-2 mb-0"
    error="b"
  />
</React.Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: false campaign processing 1`] = `
<React.Fragment>
  <div>
    <React.Fragment>
      <Memo(SyncIcon)
        className="icon-inline text-info mr-1"
      />
      Campaign processing
    </React.Fragment>
  </div>
  <div>
    <div
      className="progress mt-2 mb-1"
    >
      <div
        className="progress-bar"
        style={
          Object {
            "width": "50%",
          }
        }
      >
         
      </div>
    </div>
    <p>
      Creating changes: 
      3
       / 
      6
    </p>
  </div>
  <ErrorAlert
    className="mt-2 mb-0"
    error="a"
  />
  <ErrorAlert
    className="mt-2 mb-0"
    error="b"
  />
</React.Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: false closed campaign 1`] = `
<React.Fragment>
  <div>
    <React.Fragment>
      <Memo(ImageAutoAdjustIcon)
        className="icon-inline text-danger mr-1"
      />
       Campaign is closed. No changes can be made to this campaign anymore.
    </React.Fragment>
  </div>
</React.Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: false drafted campaign 1`] = `
<React.Fragment>
  <React.Fragment>
    <div
      className="d-flex alert alert-info mb-0 mt-2"
    >
      <Memo(InformationIcon)
        className="icon-inline mr-1"
      />
       Campaign is a draft.
       
      No changesets have
       
      been created on code hosts yet.
    </div>
  </React.Fragment>
  <div
    className="d-flex mt-2"
  >
    <Memo(CheckCircleIcon)
      className="icon-inline text-success mr-1"
    />
     Creation completed
  </div>
</React.Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: false drafted campaign, some published 1`] = `
<React.Fragment>
  <React.Fragment>
    <div
      className="d-flex alert alert-info mb-0 mt-2"
    >
      <Memo(InformationIcon)
        className="icon-inline mr-1"
      />
       Campaign is a draft.
       
      Only a subset of changesets has
       
      been created on code hosts yet.
    </div>
  </React.Fragment>
  <div
    className="d-flex mt-2"
  >
    <Memo(CheckCircleIcon)
      className="icon-inline text-success mr-1"
    />
     Creation completed
  </div>
</React.Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: true campaign errored 1`] = `
<React.Fragment>
  <div>
    <React.Fragment>
      <Memo(AlertCircleIcon)
        className="icon-inline text-danger mr-1"
      />
      Error creating campaign
    </React.Fragment>
  </div>
  <ErrorAlert
    className="mt-2 mb-0"
    error="a"
  />
  <ErrorAlert
    className="mt-2 mb-0"
    error="b"
  />
  <button
    className="btn btn-primary mt-2"
    onClick={[Function]}
    type="button"
  >
    Retry failed jobs
  </button>
</React.Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: true campaign processing 1`] = `
<React.Fragment>
  <div>
    <React.Fragment>
      <Memo(SyncIcon)
        className="icon-inline text-info mr-1"
      />
      Campaign processing
    </React.Fragment>
  </div>
  <div>
    <div
      className="progress mt-2 mb-1"
    >
      <div
        className="progress-bar"
        style={
          Object {
            "width": "50%",
          }
        }
      >
         
      </div>
    </div>
    <p>
      Creating changes: 
      3
       / 
      6
    </p>
  </div>
  <ErrorAlert
    className="mt-2 mb-0"
    error="a"
  />
  <ErrorAlert
    className="mt-2 mb-0"
    error="b"
  />
</React.Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: true closed campaign 1`] = `
<React.Fragment>
  <div>
    <React.Fragment>
      <Memo(ImageAutoAdjustIcon)
        className="icon-inline text-danger mr-1"
      />
       Campaign is closed. No changes can be made to this campaign anymore.
    </React.Fragment>
  </div>
</React.Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: true drafted campaign 1`] = `
<React.Fragment>
  <React.Fragment>
    <div
      className="d-flex alert alert-info mb-0 mt-2"
    >
      <Memo(InformationIcon)
        className="icon-inline mr-1"
      />
       Campaign is a draft.
       
      No changesets have
       
      been created on code hosts yet.
    </div>
    <button
      className="btn btn-primary mt-2"
      onClick={[Function]}
      type="button"
    >
      Publish campaign
    </button>
  </React.Fragment>
  <div
    className="d-flex mt-2"
  >
    <Memo(CheckCircleIcon)
      className="icon-inline text-success mr-1"
    />
     Creation completed
  </div>
</React.Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: true drafted campaign, some published 1`] = `
<React.Fragment>
  <React.Fragment>
    <div
      className="d-flex alert alert-info mb-0 mt-2"
    >
      <Memo(InformationIcon)
        className="icon-inline mr-1"
      />
       Campaign is a draft.
       
      Only a subset of changesets has
       
      been created on code hosts yet.
    </div>
    <button
      className="btn btn-primary mt-2"
      onClick={[Function]}
      type="button"
    >
      Publish campaign
    </button>
  </React.Fragment>
  <div
    className="d-flex mt-2"
  >
    <Memo(CheckCircleIcon)
      className="icon-inline text-success mr-1"
    />
     Creation completed
  </div>
</React.Fragment>
`;
